[tool.poetry]
name = "wikipedia-connections"
version = "0.1.0"
description = ""
authors = ["Josip Mrden <josip.mrden@memgraph.io>"]

[tool.poetry.dependencies]
python = "^3.9"
gqlalchemy = "^1.3.1"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
